<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MockWalkActivity">

    <TextView
        android:id="@+id/mock_You_ve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/you_ve_walked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mock_stepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/zero_step"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mock_You_ve" />

    <TextView
        android:id="@+id/mock_Steps_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/steps_on_this_walk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mock_stepCount" />

    <TextView
        android:id="@+id/mock_mileCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/miles_so_far"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mock_Steps_on" />

    <TextView
        android:id="@+id/mock_hrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/zero_hr"
        android:textSize="@dimen/walk_time_size"
        app:layout_constraintEnd_toStartOf="@+id/mock_mins"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mock_mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/zero_min"
        android:textSize="@dimen/walk_time_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mock_secs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/zero_sec"
        android:textSize="@dimen/walk_time_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mock_mins"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mock_stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="529dp"
        android:text="@string/stop_and_save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mock_addStepsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/add_five_hundred_Steps"
        app:layout_constraintBottom_toTopOf="@+id/mock_mins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mock_mileCount"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mock_setTimeField"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="476dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/mock_stopButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/mock_setTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/set_ms"
        app:layout_constraintStart_toEndOf="@+id/mock_setTimeField"
        app:layout_constraintTop_toBottomOf="@+id/mock_secs" />

</androidx.constraintlayout.widget.ConstraintLayout>