<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/parent_layout">

    <ToggleButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/favoriteBtn"
        android:textOn="@string/empty"
        android:textOff="@string/empty"
        ></ToggleButton>

    <Button
        android:id="@+id/teammate_icon"
        android:background="@drawable/button_background"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="lol"
        android:textSize="@dimen/route_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/route_name"
        android:id="@+id/route_name"
        android:layout_toRightOf="@+id/favoriteBtn"
        android:textSize="30sp"
        android:textColor="#000"
        android:paddingLeft="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/staring_point"
        android:id="@+id/starting_point"
        android:layout_toRightOf="@+id/route_name"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/sample_time"
        android:layout_below="@+id/route_name"
        android:id="@+id/route_date"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/sample_miles"
        android:layout_below="@+id/route_name"
        android:layout_toRightOf="@+id/route_date"
        android:id="@+id/route_mile"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/sample_step"
        android:layout_below="@+id/route_name"
        android:layout_toRightOf="@+id/route_mile"
        android:id="@+id/route_step"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="teammate"
        android:layout_below="@+id/route_name"
        android:layout_toRightOf="@+id/route_step"
        android:id="@+id/teammate_name"
        android:textSize="15sp"
        android:paddingLeft="15dp"
        />
</RelativeLayout>