<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HeightScreenActivity"
    tools:showIn="@layout/activity_height">

    <TextView
        android:id="@+id/enterHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_text_field"
        android:textSize="@dimen/content_height_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/height_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_height_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/text_feet"
        app:layout_constraintStart_toEndOf="@+id/spinner_feet"
        app:layout_constraintTop_toTopOf="@+id/spinner_feet" />

    <TextView
        android:id="@+id/textView_inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"

        android:text="@string/text_inch"
        app:layout_constraintEnd_toEndOf="@+id/enterHeight"
        app:layout_constraintTop_toBottomOf="@+id/enterHeight" />

    <Spinner
        android:id="@+id/spinner_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/enterHeight"
        app:layout_constraintTop_toTopOf="@+id/spinner_inch" />

    <Spinner
        android:id="@+id/spinner_inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/textView_inch"
        app:layout_constraintTop_toTopOf="@+id/textView_inch" />

</androidx.constraintlayout.widget.ConstraintLayout>